Add splitMode to the args for split-pane (as -D for duplicate) (#9652)
Closes #9579

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -308,6 +308,9 @@
   <data name="CmdSplitPaneVerticalArgDesc" xml:space="preserve">
     <value>Create the new pane as a vertical split (think [|])</value>
   </data>
+  <data name="CmdSplitPaneDuplicateArgDesc" xml:space="preserve">
+    <value>Create the new pane by duplicating the profile of the focused pane</value>
+  </data>
   <data name="CmdStartingDirArgDesc" xml:space="preserve">
     <value>Open in the given directory instead of the profile's set "startingDirectory"</value>
     <comment>{Locked="\"startingDirectory\""}</comment>
