--- a/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
@@ -381,4 +381,14 @@
   <data name="OpenSettingsUICommandKey" xml:space="preserve">
     <value>Open Settings...</value>
   </data>
+  <data name="RenameWindowCommandKey" xml:space="preserve">
+    <value>Rename window to "{0}"</value>
+    <comment>{0} will be replaced with a user-defined string</comment>
+  </data>
+  <data name="ResetWindowNameCommandKey" xml:space="preserve">
+    <value>Reset window name</value>
+  </data>
+  <data name="OpenWindowRenamerCommandKey" xml:space="preserve">
+    <value>Rename window...</value>
+  </data>
 </root>
