--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -637,4 +637,16 @@
   <data name="CommandPaletteMenuItem" xml:space="preserve">
     <value>Command Palette</value>
   </data>
+  <data name="ShellExtension_OpenInTerminalMenuItem_Dev" xml:space="preserve">
+    <value>Open in Windows Terminal (Dev)</value>
+    <comment>{Locked} The dev build will never be seen in multiple languages</comment>
+  </data>
+  <data name="ShellExtension_OpenInTerminalMenuItem_Preview" xml:space="preserve">
+    <value>Open in Windows Terminal Preview</value>
+    <comment>{Locked="Windows"} This is a menu item that will be displayed in the Windows File Explorer that launches the Preview version of Windows Terminal</comment>
+  </data>
+  <data name="ShellExtension_OpenInTerminalMenuItem" xml:space="preserve">
+    <value>Open in Windows Terminal</value>
+    <comment>{Locked="Windows"} This is a menu item that will be displayed in the Windows File Explorer that launches the non-preview version of Windows Terminal</comment>
+  </data>
 </root>
