Clamp the `focusTab` action to the number of available tabs (#10651)
## Summary of the Pull Request

When we perform a `focusTab` action, we currently do nothing if the parameter was greater than the number of tabs. This PR changes that behavior. Now, `focus-tab -t 999999` will always focus the last tab, instead of silently doing nothing. 

## PR Checklist
* [x] Closes #9369 
* [x] I work here
* [x] Tests added/passed
* [n/a] Requires documentation to be updated

## Validation Steps Performed
* [x] ran tests
* [x] validated commandline manually

--- a/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
@@ -365,6 +365,9 @@
   <data name="SwitchToTabCommandKey" xml:space="preserve">
     <value>Switch to tab</value>
   </data>
+  <data name="SwitchToLastTabCommandKey" xml:space="preserve">
+    <value>Switch to the last tab</value>
+  </data>
   <data name="TabSearchCommandKey" xml:space="preserve">
     <value>Search for tab...</value>
   </data>
