--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -282,6 +282,16 @@
   <data name="CmdFocusTabTargetArgDesc" xml:space="preserve">
     <value>Move focus the tab at the given index</value>
   </data>
+  <data name="CmdMovePaneTabArgDesc" xml:space="preserve">
+    <value>Move focused pane to the tab at the given index</value>
+  </data>
+  <data name="CmdMovePaneDesc" xml:space="preserve">
+    <value>Move focused pane to another tab</value>
+  </data>
+  <data name="CmdMPDesc" xml:space="preserve">
+    <value>An alias for the "move-pane" subcommand.</value>
+    <comment>{Locked="\"move-pane\""}</comment>
+  </data>
   <data name="CmdSplitPaneSizeArgDesc" xml:space="preserve">
     <value>Specify the size as a percentage of the parent pane. Valid values are between (0,1), exclusive.</value>
   </data>
@@ -359,14 +369,10 @@
   <data name="CmdMoveFocusDirectionArgDesc" xml:space="preserve">
     <value>The direction to move focus in</value>
   </data>
-  <data name="CmdMovePaneDesc" xml:space="preserve">
+  <data name="CmdSwapPaneDesc" xml:space="preserve">
     <value>Swap the focused pane with the adjacent pane in the specified direction</value>
   </data>
-  <data name="CmdMPDesc" xml:space="preserve">
-    <value>An alias for the "move-pane" subcommand.</value>
-    <comment>{Locked="\"move-pane\""}</comment>
-  </data>
-  <data name="CmdMovePaneDirectionArgDesc" xml:space="preserve">
+  <data name="CmdSwapPaneDirectionArgDesc" xml:space="preserve">
     <value>The direction to move the focused pane in</value>
   </data>
   <data name="CmdFocusDesc" xml:space="preserve">
