--- a/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
@@ -246,15 +246,15 @@
   <data name="MoveFocusToLastUsedPane" xml:space="preserve">
     <value>Move focus to the last used pane</value>
   </data>
-  <data name="MovePaneCommandKey" xml:space="preserve">
-    <value>Move pane</value>
+  <data name="SwapPaneCommandKey" xml:space="preserve">
+    <value>Swap pane</value>
   </data>
-  <data name="MovePaneWithArgCommandKey" xml:space="preserve">
-    <value>Move pane {0}</value>
+  <data name="SwapPaneWithArgCommandKey" xml:space="preserve">
+    <value>Swap pane {0}</value>
     <comment>{0} will be replaced with one of the four directions "DirectionLeft", "DirectionRight", "DirectionUp", "DirectionDown"</comment>
   </data>
-  <data name="MovePaneToLastUsedPane" xml:space="preserve">
-    <value>Move pane to the last used pane</value>
+  <data name="SwapPaneToLastUsedPane" xml:space="preserve">
+    <value>Swap panes with the last used pane</value>
   </data>
   <data name="NewTabCommandKey" xml:space="preserve">
     <value>New tab</value>
@@ -355,6 +355,9 @@
   </data>
   <data name="SplitHorizontalCommandKey" xml:space="preserve">
     <value>Split pane horizontally</value>
+  </data>
+  <data name="MovePaneCommandKey" xml:space="preserve">
+    <value>Move pane</value>
   </data>
   <data name="SplitPaneCommandKey" xml:space="preserve">
     <value>Split pane</value>
