--- a/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
@@ -436,4 +436,7 @@
     <value>Windows Console Host</value>
     <comment>Name describing the usage of the classic windows console as the terminal UI. (`conhost.exe`)</comment>
   </data>
+  <data name="MinimizeToTrayCommandKey" xml:space="preserve">
+    <value>Minimize current window to tray</value>
+  </data>
 </root>
