Add first pane movement for MoveFocus/SwapPane. (#11044)
This commit adds the ability to target the first pane in the tree,
always.

I wasn't able to find an existing issue for this, it is just a personal
feature for me. I won't be heartbroken if it does not get merged.

As motivation, I frequently have setups where the thing I am primarily
working on is a large pane on the left and everything else is in smaller
panes positioned elsewhere. I like to have one hotkey where I can go to
any pane and then make it the "primary" pane if I am changing what I am
working on or need to focus on another set of code/documentation/etc.

## Validation Steps Performed
Confirmed that the move focus and swap pane variants both affect the
correct pane.

--- a/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
@@ -246,6 +246,15 @@
   <data name="MoveFocusToLastUsedPane" xml:space="preserve">
     <value>Move focus to the last used pane</value>
   </data>
+  <data name="MoveFocusNextInOrder" xml:space="preserve">
+    <value>Move focus to the next pane in order</value>
+  </data>
+  <data name="MoveFocusPreviousInOrder" xml:space="preserve">
+    <value>Move focus to the previous pane in order</value>
+  </data>
+  <data name="MoveFocusFirstPane" xml:space="preserve">
+    <value>Move focus to the first pane</value>
+  </data>
   <data name="SwapPaneCommandKey" xml:space="preserve">
     <value>Swap pane</value>
   </data>
@@ -255,6 +264,15 @@
   </data>
   <data name="SwapPaneToLastUsedPane" xml:space="preserve">
     <value>Swap panes with the last used pane</value>
+  </data>
+  <data name="SwapPaneNextInOrder" xml:space="preserve">
+    <value>Swap panes with the next pane in order</value>
+  </data>
+  <data name="SwapPanePreviousInOrder" xml:space="preserve">
+    <value>Swap panes with the previous pane in order</value>
+  </data>
+  <data name="SwapPaneFirstPane" xml:space="preserve">
+    <value>Swap panes with the first pane</value>
   </data>
   <data name="NewTabCommandKey" xml:space="preserve">
     <value>New tab</value>
@@ -435,18 +453,6 @@
   <data name="InboxWindowsConsoleName" xml:space="preserve">
     <value>Windows Console Host</value>
     <comment>Name describing the usage of the classic windows console as the terminal UI. (`conhost.exe`)</comment>
-  </data>
-  <data name="MoveFocusNextInOrder" xml:space="preserve">
-    <value>Move focus to the next pane in order</value>
-  </data>
-  <data name="MoveFocusPreviousInOrder" xml:space="preserve">
-    <value>Move focus to the previous pane in order</value>
-  </data>
-  <data name="SwapPaneNextInOrder" xml:space="preserve">
-    <value>Swap panes with the next pane in order</value>
-  </data>
-  <data name="SwapPanePreviousInOrder" xml:space="preserve">
-    <value>Swap panes with the previous pane in order</value>
   </data>
   <data name="MinimizeToTrayCommandKey" xml:space="preserve">
     <value>Minimize current window to tray</value>
