Add Tray Icon settings to the SettingsUI (#11070)
Adds toggle buttons to the settings UI for `minimizeToTray` and `alwaysShowTrayIcon` that I mistakenly left out.

--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1090,6 +1090,14 @@
     <value>Pane animations</value>
     <comment>Header for a control to toggle animations on panes. "Enabled" value enables the animations.</comment>
   </data>
+  <data name="Globals_AlwaysShowTrayIcon.Header" xml:space="preserve">
+    <value>Always display an icon in the notification area</value>
+    <comment>Header for a control to toggle whether the tray icon should always be shown.</comment>
+  </data>
+  <data name="Globals_MinimizeToTray.Header" xml:space="preserve">
+    <value>Hide Terminal in the notification area when it is minimized</value>
+    <comment>Header for a control to toggle whether the terminal should hide itself in the tray instead of the taskbar when minimized.</comment>
+  </data>
   <data name="SettingContainer_OverrideMessageBaseLayer" xml:space="preserve">
     <value>Reset to inherited value.</value>
     <comment>This button will remove a user's customization from a given setting, restoring it to the value that the profile inherited. This is a text label on a button.</comment>
